--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "GD 4 chrome",
-  "version": "0.5001",
+  "version": "0.6001",
   "description": "Makes your life easier when working with GoodData gray pages",
   "options_page": "options.html",
-  "background": {"persistent": false, "scripts": ["GDextension.js"] },
+  "background": {"persistent": true, "scripts": ["GDextension.js"] },
  
   "page_action" :
   {
@@ -14,20 +14,26 @@
 
   "content_scripts": [
     {
-      "matches": ["https://secure.gooddata.com/*","https://na1.gooddata.com/*","https://na2.gooddata.com/*","https://*.getgooddata.com/*"],
+      "matches": ["https://*.secure.gooddata.com/*","https://na1.gooddata.com/*","https://na2.gooddata.com/*","https://*.getgooddata.com/*"],
       "js": ["gd_content_script.js"],
       "css":["gd_content.css"]
-    }
+    },
+      {
+      "matches": ["https://*.secure-di.gooddata.com/uploads/*","https://na2.gooddata.com/uploads/*","https://*.getgooddata.com/uploads/*"],
+      "js": ["gd_cc_log_script.js"],
+      "css":["gd_cc_log.css"]
+    } 
   ],
 
 
   "permissions" : [
-    "https://secure.gooddata.com/*","https://na1.gooddata.com/*","https://na2.gooddata.com/*","https://*.getgooddata.com/*",
+    "https://*.secure.gooddata.com/*","https://na1.gooddata.com/*","https://na2.gooddata.com/*","https://*.getgooddata.com/*",
       "tabs"
     ],
   "icons" : {
     "48" : "gd48.png"
   },
+  "web_accessible_resources": ["cc_log_switching.js"],
 
   "manifest_version": 2
 }
