--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GoodData Extension Tool",
-  "version": "0.7000",
+  "name": "GoodData Extension Tool BETA",
+  "version": "0.7200",
   "description": "Makes your life easier when developing in GoodData BI platform",
   "options_page": "options.html",
   "background": {"persistent": false, "scripts": ["GDextension.js"] },
@@ -29,7 +29,8 @@
   "permissions" : [
     "https://*/*",
     "tabs",
-    "storage"
+    "storage",
+    "notifications"
     ],
   "icons" : {
     "48" : "gd48.png"
