--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
-  "name": "GoodData Extension Tool BETA",
-  "version": "0.9003",
+  "name": "GoodData Extension Tool Beta",
+  "version": "0.9006",
   "icons" : {
-    "48" : "gd48_beta.png"
+    "48" : "guy48_beta.png",
+    "96" : "guy96_beta.png",
+    "128": "guy128_beta.png",
+    "256": "guy256_beta.png"
+      
   },  
 
   "description": "Makes your life easier when developing in GoodData BI platform",
@@ -11,7 +15,10 @@
 
   "page_action" :
   {
-    "default_icon" : "icons/gd19_rebrand_gray.png",
+    "default_icon" : {
+      "19" : "icons/gd19_rebrand_gray.png",
+      "38" : "retina/icons/gd19_rebrand_gray.png"
+    },
     "default_title" : "Legen...wait for it GoodData is loading...dary!",
     "default_popup" : "gdpopup.html"
   },
