--- a/manifest_backup.json
+++ b/manifest_backup.json
@@ -1,11 +1,11 @@
 {
-  "name": "GoodData Extension Tool BETA",
-  "version": "0.9022",
+  "name": "GoodData Extension Tool",
+  "version": "0.9014",
   "icons" : {
-    "48" : "guy48_beta.png",
-    "96" : "guy96_beta.png",
-    "128": "guy128_beta.png",
-    "256": "guy256_beta.png"
+    "48" : "guy48.png",
+    "96" : "guy96.png",
+    "128": "guy128.png",
+    "256": "guy256.png"
       
   },  
 
@@ -16,8 +16,8 @@
   "page_action" :
   {
     "default_icon" : {
-      "19" : "icons/gd19_rebrand_gray_beta.png",
-      "38" : "retina/icons/gd19_rebrand_gray_beta.png"
+      "19" : "icons/gd19_rebrand_gray.png",
+      "38" : "retina/icons/gd19_rebrand_gray.png"
     },
     "default_title" : "Legen...wait for it GoodData is loading...dary!",
     "default_popup" : "gdpopup.html"
@@ -42,7 +42,7 @@
     "tabs",
     "storage",
     "notifications"
-  ],
+    ],
   "web_accessible_resources": ["cc_log_switching.js"],
 
   "manifest_version": 2
