--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "GoodData Extension Tool BETA",
-  "version": "0.9102",
-  "version_name": "0.9102 BETA",
+  "name": "GoodData Extension Tool",
+  "version": "0.9105",
+  "version_name": "0.9105",
 
 
   "icons" : {
-    "48" : "default_beta.png",
-    "96" : "guy96_beta.png",
-    "128": "guy128_beta.png",
-    "256": "guy256_beta.png"
+    "48" : "default.png",
+    "96" : "guy96.png",
+    "128": "guy128.png",
+    "256": "guy256.png"
       
   },  
 
@@ -19,8 +19,8 @@
   "page_action" :
   {
     "default_icon" : {
-      "19" : "icons/gd19_rebrand_gray_beta.png",
-      "38" : "retina/icons/gd19_rebrand_gray_beta.png"
+      "19" : "icons/gd19_rebrand_gray.png",
+      "38" : "retina/icons/gd19_rebrand_gray.png"
     },
     "default_title" : "Legen...wait for it GoodData is loading...dary!",
     "default_popup" : "gdpopup.html"
